# LaMuralla-AI

./: Cargo.toml  Dockerfile  README.md
src/: Dockerfile  main.rs
src/application/: dtos.rs  ingestion.rs  mod.rs
src/domain/: errors.rs  mod.rs  models.rs  ports.rs
src/infrastructure/: mod.rs  transmutation.rs
src/infrastructure/ai/: mod.rs  rig_client.rs
src/infrastructure/persistence/: mod.rs  neo4j_repo.rs
src/interface/: mod.rs
src/interface/handlers/: admin.rs  chat.rs  graph.rs  ingest.rs  mod.rs  ui.rs
templates/: base.html  dashboard.html  login.html
