[package]
name = "graph-rag-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout"] }
# Añadimos "fs" para servir estáticos
tower-http = { version = "0.5", features = ["cors", "trace", "auth", "fs"] }

# Serialization & Validation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.16", features = ["derive"] }

# Documentation
utoipa = { version = "4", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

# Database & AI
neo4rs = "0.7"
rig-core = "0.0.6"
reqwest = { version = "0.11", features = ["json"] }

# Utils
secrecy = { version = "0.8", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
async-trait = "0.1"

# FRONTEND ENGINE (Añadido)
tera = "1.19"